--- a/.stylelintrc
+++ b/.stylelintrc
@@ -4,5 +4,8 @@
     "stylelint-config-standard",
     "stylelint-config-styled-components"
   ],
+  "rules": {
+    "no-descending-specificity": null
+  },
   "syntax": "scss"
 }
