--- a/package.json
+++ b/package.json
@@ -2,17 +2,20 @@
   "name": "styled-reboot",
   "version": "2.0.0",
   "description": "Bootstrap 4 reboot.css for styled-components",
-  "main": "lib/index.js",
-  "jsnext:main": "dist/styled-reboot.es.js",
-  "module": "dist/styled-reboot.es.js",
+  "main": "dist/index.js",
+  "files": [
+    "dist/index.js",
+    "index.d.ts"
+  ],
+  "typings": "index.d.ts",
   "scripts": {
     "lint:css": "stylelint './src/**/*.js'",
     "lint:js": "eslint .",
-    "test": "npm run lint:css && npm run lint:js",
+    "lint": "npm run lint:css && npm run lint:js",
+    "test": "npm run lint",
     "prebuild": "npm run test",
-    "build:lib": "babel --out-dir lib src",
-    "build:dist": "rollup -c && rollup -c --environment ESBUNDLE && rollup -c --environment PRODUCTION",
-    "build": "npm run build:lib && npm run build:dist",
+    "build": "babel -d dist src",
+    "prepublish": "npm run build",
     "prepare": "npm run build"
   },
   "repository": {
@@ -27,7 +30,16 @@
     "reboot.css",
     "bootstrap"
   ],
-  "author": "http://pager.com <alex@pager.com>",
+  "author": {
+    "name": "Alex Ruzzarin",
+    "url": "https://github.com/alexruzzarin/"
+  },
+  "contributors": [
+    {
+      "name": "Mikkel Høgh",
+      "url": "https://github.com/mikl/"
+    }
+  ],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/alexruzzarin/styled-reboot/issues"
@@ -50,11 +62,6 @@
     "eslint-plugin-react": "^7.10.0",
     "prettier": "1.13.7",
     "react": "^16.4.1",
-    "rollup": "^0.62.0",
-    "rollup-plugin-babel": "^3.0.7",
-    "rollup-plugin-commonjs": "^9.1.3",
-    "rollup-plugin-node-resolve": "^3.3.0",
-    "rollup-plugin-uglify": "^4.0.0",
     "styled-components": "^3.3.3",
     "stylelint": "^9.3.0",
     "stylelint-config-standard": "18.2.0",
