--- a/package.json
+++ b/package.json
@@ -69,6 +69,6 @@
     "stylelint-processor-styled-components": "1.5.0"
   },
   "peerDependencies": {
-    "styled-components": "3.x"
+    "styled-components": ">=3 <5"
   }
 }
