fix(tsc): change target module to `commonjs`
this can ensure compability with node (for SSR) and babel/webpack/...

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "declaration": true,
     "declarationDir": ".",
     "esModuleInterop": true,
-    "module": "es6",
+    "module": "commonjs",
     "moduleResolution": "node",
     "noImplicitAny": true,
     "jsx": "react",
