--- a/package.json
+++ b/package.json
@@ -48,23 +48,23 @@
   "devDependencies": {
     "@semantic-release/changelog": "5.0.1",
     "@semantic-release/git": "9.0.0",
-    "@types/styled-components": "4.4.3",
+    "@types/styled-components": "^5.1.2",
     "commitizen": "4.2.1",
     "cz-conventional-changelog": "3.2.1",
     "prettier": "2.1.0",
     "react": "16.13.1",
     "semantic-release": "17.1.1",
-    "styled-components": "4.4.1",
+    "styled-components": "^5.1.1",
     "stylelint": "13.6.1",
-    "stylelint-config-standard": "19.0.0",
+    "stylelint-config-standard": "^20.0.0",
     "stylelint-config-styled-components": "0.1.1",
     "stylelint-processor-styled-components": "1.10.0",
     "tslint": "6.1.3",
     "tslint-config-prettier": "1.18.0",
     "tslint-eslint-rules": "5.4.0",
-    "typescript": "3.8.3"
+    "typescript": "^4.0.2"
   },
   "peerDependencies": {
-    "styled-components": ">3 <=5"
+    "styled-components": ">=4"
   }
 }
